[gd_scene load_steps=11 format=2]

[ext_resource path="res://pular_bt.gd" type="Script" id=1]
[ext_resource path="res://scenes/sair_bt.gd" type="Script" id=2]
[ext_resource path="res://telas placeholder/Sem grid/darkbg.png" type="Texture" id=3]
[ext_resource path="res://TELAS/pop_up_pular.png" type="Texture" id=4]
[ext_resource path="res://scenes/pular_go.gd" type="Script" id=5]
[ext_resource path="res://scenes/continuar_go.gd" type="Script" id=6]
[ext_resource path="res://TELAS/pop_up_sair.png" type="Texture" id=7]
[ext_resource path="res://scenes/sair_go.gd" type="Script" id=8]
[ext_resource path="res://scenes/continuar_go_sair.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 147.101, 13.7948 )

[node name="pular_e_sair_buttons" type="Node2D"]

_sections_unfolded = [ "Transform" ]

[node name="pular_bt" type="Area2D" parent="." index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pular_bt" index="0"]

position = Vector2( 239.071, 1484.92 )
scale = Vector2( 1, 2.54923 )
shape = SubResource( 1 )

[node name="sair_bt" type="Area2D" parent="." index="1"]

editor/display_folded = true
position = Vector2( 404.904, 0 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="sair_bt" index="0"]

position = Vector2( 239.071, 1484.92 )
scale = Vector2( 1, 2.54923 )
shape = SubResource( 1 )

[node name="darkbg" type="Sprite" parent="." index="2"]

visible = false
position = Vector2( 453.448, 800.813 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="pop_up_pular" type="Sprite" parent="." index="3"]

visible = false
position = Vector2( 458.08, 868.232 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="pular_go" type="Area2D" parent="pop_up_pular" index="0"]

position = Vector2( -2290.4, -4341.16 )
scale = Vector2( 5, 5 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pop_up_pular/pular_go" index="0"]

position = Vector2( 248.389, 1112.2 )
scale = Vector2( 1, 2.54923 )
shape = SubResource( 1 )

[node name="continuar_go" type="Area2D" parent="pop_up_pular" index="1"]

position = Vector2( -2290.4, -4341.16 )
scale = Vector2( 5, 5 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pop_up_pular/continuar_go" index="0"]

position = Vector2( 665.628, 1107.55 )
scale = Vector2( 1.04828, 2.54923 )
shape = SubResource( 1 )

[node name="pop_up_sair" type="Sprite" parent="." index="4"]

visible = false
position = Vector2( 458.08, 868.232 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 7 )
_sections_unfolded = [ "Transform" ]

[node name="sair_go" type="Area2D" parent="pop_up_sair" index="0"]

position = Vector2( -2290.4, -4341.16 )
scale = Vector2( 5, 5 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pop_up_sair/sair_go" index="0"]

position = Vector2( 248.389, 1112.2 )
scale = Vector2( 1, 2.54923 )
shape = SubResource( 1 )

[node name="continuar_go" type="Area2D" parent="pop_up_sair" index="1"]

position = Vector2( -2290.4, -4341.16 )
scale = Vector2( 5, 5 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pop_up_sair/continuar_go" index="0"]

position = Vector2( 665.628, 1107.55 )
scale = Vector2( 1.04828, 2.54923 )
shape = SubResource( 1 )


